# xai_viz

./: .dockerignore  .gitignore  README.md  dev.sh  docker-compose.yml  main.py  pyproject.toml
.agents/skills/frontend-developer/: SKILL.md
.agents/skills/playwright-testing/: SKILL.md
.agents/skills/quality/: SKILL.md
app/: __init__.py
app/backend/: Dockerfile  __init__.py  config.py  main.py  validators.py
app/backend/routers/: __init__.py  attention.py  comparison.py  images.py  metrics.py
app/frontend/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
app/precompute/: __init__.py  benchmark_metrics_iteration.py  generate_attention_cache.py  generate_feature_cache.py  generate_heatmap_images.py  generate_metrics_cache.py
experiments/scripts/: analyze_delta_iou.py  analyze_feature_delta_iou.py  analyze_model_correlation.py  analyze_q1_continuous_baselines.py  analyze_q2_metrics.py  analyze_style_breakdown.py  create_presentation.js  fine_tune_models.py  generate_layer_progression_figure.py  generate_paper_fig6.py  generate_run_matrix_figures.py  generate_slide_images.py
notebooks/: 01_data_exploration.ipynb
outputs/figures/: commentary.txt
outputs/results/: active_experiment.json  fine_tuning_results.json  q1_continuous_baseline_comparison.json  q1_continuous_baseline_summary.md  q2_delta_iou_analysis.json  q2_metrics_analysis.json
scripts/: download_wikichurches.py
src/ssl_attention/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/test_attention/: __init__.py  test_cls_attention.py  test_mean_attention.py  test_rollout.py
tests/test_backend/: test_comparison_validation.py  test_error_responses.py  test_image_detail_progression_api.py  test_metrics_mse_api.py  test_q2_summary.py  test_q3_head_api.py
tests/test_data/: __init__.py  test_annotations.py  test_wikichurches.py
tests/test_evaluation/: test_fine_tuning.py  test_fine_tuning_artifacts.py  test_lora.py  test_q1_continuous_baselines.py  test_q2_delta_analysis.py
tests/test_metrics/: __init__.py  test_baselines.py  test_continuous.py  test_iou.py  test_pointing_game.py  test_statistics.py
tests/test_models/: __init__.py  test_gradcam.py  test_mae.py  test_model_outputs.py
tests/test_precompute/: test_generate_attention_cache.py  test_generate_feature_cache.py  test_generate_heatmap_images.py  test_generate_metrics_cache.py
tests/test_services/: test_attention_service.py  test_metrics_service.py  test_similarity_service.py  test_validators.py
(+142 files in other folders)
